force-app/main/default/objects/Patient_Details__c/Patient_Details__c.object-meta.xml
<CustomObject>
    <label>Patient Details</label>
    <nameField>
        <label>Patient Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Patient Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>