force-app/main/default/objects/Patient_Details__c/fields/Malady_Disease__c.field-meta.xml
<CustomField>
    <fullName>Malady_Disease__c</fullName>
    <label>Malady/Disease</label>
    <length>50</length>
    <type>Text</type>
</CustomField>