force-app/main/default/objects/Patient_Details__c/fields/Online_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Online_Appointment__c</fullName>
    <label>Online Appointment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>