force-app/main/default/objects/Patient_Details__c/fields/Online_Consultation_Timings__c.field-meta.xml
<CustomField>
    <fullName>Online_Consultation_Timings__c</fullName>
    <label>Online Consultation Timings</label>
    <type>DateTime</type>
</CustomField>