force-app/main/default/objects/Patient_Details__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Patient_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>